# ectert

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/: ASSETS.md
assets/models/: viking_room.gltf
lib/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  app.h  canvas.cpp  canvas.h  main.cpp  main.h  main_scene.h
src/demo/: chapter_eleven.h  chapter_fifteen.h  chapter_five.h  chapter_four.h  chapter_fourteen.h  chapter_nine.h  chapter_one.cpp  chapter_one.h  chapter_seven.h  chapter_six.h  chapter_ten.h  chapter_thirteen.h  chapter_three.h  chapter_twelve.h  chapter_two.cpp  chapter_two.h  indirect_demo.h  random_spheres_demo.h
src/editor/: editor_model.cpp  editor_model.h  editor_window.cpp  editor_window.h  gl_util.h  scripting.cpp  scripting.h
src/files/: gltf.h  obj.cpp  obj.h  png.cpp  png.h  ppm.cpp  ppm.h
src/geom/: vertex.h
src/intersection/: hit.cpp  hit.h  intersection.cpp  intersection.h  ray.cpp  ray.h  sphere.cpp  sphere.h
src/light/: background.h  dielectric_material.cpp  dielectric_material.h  emissive_material.cpp  emissive_material.h  gradient_background.cpp  gradient_background.h  lambertian_material.cpp  lambertian_material.h  material.cpp  material.h  metal_material.cpp  metal_material.h  point_light.cpp  point_light.h  scatter.cpp  scatter.h
src/math/: bounds.cpp  bounds.h  color.cpp  color.h  float_util.cpp  float_util.h  matrix.cpp  matrix.h  rand_util.h  transform.cpp  transform.h  tuple.cpp  tuple.h
src/pattern/: checker_pattern.cpp  checker_pattern.h  gradient_pattern.cpp  gradient_pattern.h  pattern.cpp  pattern.h  ring_pattern.cpp  ring_pattern.h  striped_pattern.cpp  striped_pattern.h  test_pattern.cpp  test_pattern.h
src/processing/: render_process.cpp  render_process.h
src/shader/: CMakeLists.txt
src/shapes/: cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  group.cpp  group.h  plane.cpp  plane.h  shape.cpp  shape.h  sphere.cpp  sphere.h  test_shape.cpp  test_shape.h  triangle.cpp  triangle.h
src/vkutil/: uniforms.h  vulkan_commands.h  vulkan_memory.h
src/world/: camera.cpp  camera.h  world.cpp  world.h
test/: test_camera.cpp  test_canvas.cpp  test_color.cpp  test_cone.cpp  test_cube.cpp  test_cylinder.cpp  test_group.cpp  test_helpers.h  test_intersection.cpp  test_light.cpp  test_material.cpp  test_matrix.cpp  test_pattern.cpp  test_plane.cpp  test_ray.cpp  test_shape.cpp  test_sphere.cpp  test_transform.cpp  test_triangle.cpp  test_tuple.cpp  test_world.cpp
